Added HomeActivity (DayNight)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">EPSI-Android</string>
+
+
+    <!-- -->
+    <string name="info">Info</string>
+    <string name="products">Produits</string>
+
 </resources>
